ZumZumFinancials_Dev1/src/objects/Company_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Account_Lock_Date__c</fullName>
        <label>Account Lock Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VatMethod__c</fullName>
        <label>VAT Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accrual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Company Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>